--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 #spring.datasource.url=jdbc:h2:mem:Patient
 #spring.h2.console.enabled=true
 
-server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/Professeurs?createDatabaseIfNotExist=true
+server.port=8090
+spring.datasource.url=jdbc:mysql://localhost:3306/CuriculumVitae?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernates.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 
